--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "91.PzG Memberportal",
+  "name": "test",
   "version": "0.1.0",
   "license": "MIT",
   "repository": {
@@ -64,13 +64,12 @@
     "ngx-echarts": "^4.2.2",
     "node-sass": "^4.12.0",
     "normalize.css": "6.0.0",
-    "pace-js": "1.0.2",
+    "pace-js": "^1.0.2",
     "roboto-fontface": "0.8.0",
     "rxjs": "6.6.2",
     "rxjs-compat": "6.3.0",
     "socicon": "3.0.5",
     "style-loader": "^1.1.3",
-    "tinymce": "4.5.7",
     "tslib": "^2.0.0",
     "typeface-exo": "0.0.22",
     "web-animations-js": "^2.3.2",
