--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "test",
-  "version": "0.1.0",
+  "name": "ngx-admin",
+  "version": "7.0.0",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/hoersamu/enigma-website.git"
+    "url": "git+https://github.com/akveo/ngx-admin.git"
   },
   "bugs": {
-    "url": "https://github.com/hoersamu/enigma-website/issues"
+    "url": "https://github.com/akveo/ngx-admin/issues"
   },
   "scripts": {
     "ng": "ng",
@@ -37,19 +37,18 @@
     "@angular/compiler": "^11.0.9",
     "@angular/core": "^11.0.9",
     "@angular/forms": "^11.0.9",
-    "@angular/google-maps": "^11.0.4",
     "@angular/platform-browser": "^11.0.9",
     "@angular/platform-browser-dynamic": "^11.0.9",
     "@angular/router": "^11.0.9",
     "@asymmetrik/ngx-leaflet": "3.0.1",
-    "@nebular/auth": "^7.0.0",
+    "@nebular/auth": "7.0.0",
     "@nebular/eva-icons": "7.0.0",
     "@nebular/security": "7.0.0",
     "@nebular/theme": "7.0.0",
     "@swimlane/ngx-charts": "^14.0.0",
     "angular2-chartjs": "0.4.1",
     "bootstrap": "4.3.1",
-    "chart.js": "2.7.1",
+    "chart.js": "^2.9.4",
     "ckeditor": "4.7.3",
     "classlist.js": "1.1.20150312",
     "core-js": "2.5.1",
@@ -63,7 +62,7 @@
     "ng2-smart-table": "^1.6.0",
     "ngx-echarts": "^4.2.2",
     "normalize.css": "6.0.0",
-    "pace-js": "^1.0.2",
+    "pace-js": "1.0.2",
     "roboto-fontface": "0.8.0",
     "rxjs": "6.6.2",
     "rxjs-compat": "6.3.0",
@@ -79,16 +78,25 @@
     "@angular/cli": "^11.0.7",
     "@angular/compiler-cli": "^11.0.9",
     "@angular/language-service": "11.0.9",
-    "@compodoc/compodoc": "1.0.1",
+    "@compodoc/compodoc": "^1.1.11",
     "@fortawesome/fontawesome-free": "^5.2.0",
     "@types/d3-color": "1.0.5",
-    "@types/jasmine": "^3.3.0",
+    "@types/googlemaps": "^3.39.3",
+    "@types/jasmine": "^3.6.3",
     "@types/jasminewd2": "2.0.3",
     "@types/leaflet": "1.2.3",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "conventional-changelog-cli": "1.3.4",
     "husky": "0.13.3",
+    "jasmine-core": "~3.6.0",
+    "jasmine-spec-reporter": "~5.0.0",
+    "karma": "~5.1.1",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-cli": "1.0.1",
+    "karma-coverage-istanbul-reporter": "~3.0.2",
+    "karma-jasmine": "~4.0.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
     "npm-run-all": "4.0.2",
     "protractor": "~7.0.0",
     "rimraf": "2.6.1",
