--- a/package.json
+++ b/package.json
@@ -45,9 +45,7 @@
     "@nebular/security": "7.0.0",
     "@nebular/theme": "7.0.0",
     "@swimlane/ngx-charts": "^14.0.0",
-    "angular2-chartjs": "0.4.1",
     "bootstrap": "4.3.1",
-    "chart.js": "^2.9.4",
     "ckeditor": "4.7.3",
     "classlist.js": "1.1.20150312",
     "core-js": "2.5.1",
@@ -58,6 +56,7 @@
     "leaflet": "1.2.0",
     "nebular-icons": "1.1.0",
     "ng2-ckeditor": "^1.2.9",
+    "ng2-completer": "^9.0.1",
     "ng2-smart-table": "^1.6.0",
     "ngx-echarts": "^4.2.2",
     "normalize.css": "6.0.0",
