removed unused scripts

--- a/angular.json
+++ b/angular.json
@@ -42,8 +42,7 @@
             "scripts": [
               "node_modules/pace-js/pace.min.js",
               "node_modules/echarts/dist/echarts.min.js",
-              "node_modules/echarts/dist/extension/bmap.min.js",
-              "node_modules/chart.js/dist/Chart.min.js"
+              "node_modules/echarts/dist/extension/bmap.min.js"
             ],
             "allowedCommonJsDependencies": [
               "angular2-chartjs",
@@ -107,8 +106,7 @@
             "scripts": [
               "node_modules/pace-js/pace.min.js",
               "node_modules/echarts/dist/echarts.min.js",
-              "node_modules/echarts/dist/extension/bmap.min.js",
-              "node_modules/chart.js/dist/Chart.min.js"
+              "node_modules/echarts/dist/extension/bmap.min.js"
             ],
             "styles": [
               "node_modules/bootstrap/dist/css/bootstrap.css",
