too much to write a good commit message

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@asymmetrik/ngx-leaflet": "3.0.1",
     "@nebular/auth": "7.0.0",
     "@nebular/eva-icons": "7.0.0",
+    "@nebular/moment": "^7.0.0",
     "@nebular/security": "7.0.0",
     "@nebular/theme": "7.0.0",
     "@swimlane/ngx-charts": "^14.0.0",
@@ -54,6 +55,7 @@
     "intl": "1.2.5",
     "ionicons": "2.0.1",
     "leaflet": "1.2.0",
+    "moment": "^2.29.1",
     "nebular-icons": "1.1.0",
     "ng2-ckeditor": "^1.2.9",
     "ng2-completer": "^9.0.1",
