--- a/angular.json
+++ b/angular.json
@@ -82,7 +82,7 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
             "browserTarget": "ngx-admin-demo:build",
-            "proxyConfig": "src/proxy.conf.json"
+            "proxyConfig": "./proxy.conf.json"
           },
           "configurations": {
             "production": {
