--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "rxjs": "6.6.2",
     "rxjs-compat": "6.3.0",
     "socicon": "3.0.5",
+    "socket.io-client": "^3.1.0",
     "style-loader": "^1.1.3",
     "tslib": "^2.0.0",
     "typeface-exo": "0.0.22",
