--- a/package.json
+++ b/package.json
@@ -30,81 +30,74 @@
   },
   "dependencies": {
     "@akveo/ng2-completer": "^9.0.1",
-    "@angular/animations": "^11.0.9",
-    "@angular/cdk": "11.0.4",
-    "@angular/common": "^11.0.9",
-    "@angular/compiler": "^11.0.9",
-    "@angular/core": "^11.0.9",
-    "@angular/forms": "^11.0.9",
-    "@angular/platform-browser": "^11.0.9",
+    "@angular/animations": "^11.1.2",
+    "@angular/cdk": "^11.2.0",
+    "@angular/common": "^11.1.2",
+    "@angular/compiler": "^11.1.2",
+    "@angular/core": "^11.1.2",
+    "@angular/forms": "^11.1.2",
+    "@angular/platform-browser": "^11.1.2",
     "@angular/platform-browser-dynamic": "^11.0.9",
-    "@angular/router": "^11.0.9",
-    "@asymmetrik/ngx-leaflet": "3.0.1",
+    "@angular/router": "^11.1.2",
     "@nebular/auth": "7.0.0",
     "@nebular/eva-icons": "7.0.0",
     "@nebular/moment": "^7.0.0",
     "@nebular/security": "7.0.0",
     "@nebular/theme": "7.0.0",
-    "@swimlane/ngx-charts": "^14.0.0",
-    "bootstrap": "4.3.1",
-    "ckeditor": "4.7.3",
+    "bootstrap": "^4.6.0",
     "classlist.js": "1.1.20150312",
-    "core-js": "2.5.1",
-    "echarts": "^4.0.2",
+    "core-js": "^3.8.3",
+    "echarts": "^5.0.2",
     "eva-icons": "^1.1.3",
     "intl": "1.2.5",
-    "ionicons": "2.0.1",
-    "leaflet": "1.2.0",
     "moment": "^2.29.1",
     "nebular-icons": "1.1.0",
-    "ng2-ckeditor": "^1.2.9",
     "ng2-completer": "^9.0.1",
     "ng2-smart-table": "^1.6.0",
-    "ngx-echarts": "^4.2.2",
-    "normalize.css": "6.0.0",
+    "ngx-echarts": "^6.0.0",
+    "normalize.css": "^8.0.1",
     "pace-js": "1.0.2",
-    "roboto-fontface": "0.8.0",
-    "rxjs": "6.6.2",
-    "rxjs-compat": "6.3.0",
-    "socicon": "3.0.5",
-    "socket.io-client": "^3.1.0",
-    "style-loader": "^1.1.3",
+    "resize-observer-polyfill": "^1.5.1",
+    "roboto-fontface": "^0.10.0",
+    "rxjs": "^6.6.3",
+    "rxjs-compat": "^6.6.3",
+    "socket.io-client": "^3.1.1",
+    "style-loader": "^2.0.0",
     "tslib": "^2.0.0",
-    "typeface-exo": "0.0.22",
+    "typeface-exo": "^1.1.13",
     "web-animations-js": "^2.3.2",
-    "zone.js": "~0.10.3"
+    "zone.js": "^0.11.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1100.7",
-    "@angular/cli": "^11.0.7",
-    "@angular/compiler-cli": "^11.0.9",
-    "@angular/language-service": "11.0.9",
+    "@angular-devkit/build-angular": "^0.1101.4",
+    "@angular/cli": "^11.1.4",
+    "@angular/compiler-cli": "^11.1.2",
+    "@angular/language-service": "^11.1.2",
     "@compodoc/compodoc": "^1.1.11",
     "@fortawesome/fontawesome-free": "^5.2.0",
-    "@types/d3-color": "1.0.5",
-    "@types/googlemaps": "^3.39.3",
+    "@types/d3-color": "^2.0.1",
+    "@types/googlemaps": "^3.43.3",
     "@types/jasmine": "^3.6.3",
-    "@types/jasminewd2": "2.0.3",
-    "@types/leaflet": "1.2.3",
-    "@types/node": "^12.11.1",
+    "@types/jasminewd2": "^2.0.8",
+    "@types/node": "^14.14.25",
     "codelyzer": "^6.0.0",
-    "conventional-changelog-cli": "1.3.4",
-    "husky": "0.13.3",
+    "conventional-changelog-cli": "^2.1.1",
+    "husky": "^5.0.9",
     "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.1.1",
+    "jasmine-spec-reporter": "^6.0.0",
+    "karma": "^6.1.0",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-cli": "1.0.1",
+    "karma-cli": "^2.0.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
-    "npm-run-all": "4.0.2",
+    "npm-run-all": "^4.1.5",
     "protractor": "~7.0.0",
-    "rimraf": "2.6.1",
-    "stylelint": "7.13.0",
-    "ts-node": "3.2.2",
+    "rimraf": "^3.0.2",
+    "stylelint": "^13.9.0",
+    "ts-node": "^9.1.1",
     "tslint": "~6.1.0",
     "tslint-language-service": "^0.9.9",
-    "typescript": "4.0.5"
+    "typescript": "^4.1.5"
   }
 }
