--- a/package.json
+++ b/package.json
@@ -30,15 +30,15 @@
   },
   "dependencies": {
     "@akveo/ng2-completer": "^9.0.1",
-    "@angular/animations": "^11.1.2",
-    "@angular/cdk": "^11.2.0",
-    "@angular/common": "^11.1.2",
-    "@angular/compiler": "^11.1.2",
-    "@angular/core": "^11.1.2",
-    "@angular/forms": "^11.1.2",
-    "@angular/platform-browser": "^11.1.2",
-    "@angular/platform-browser-dynamic": "^11.0.9",
-    "@angular/router": "^11.1.2",
+    "@angular/animations": "^11.2.9",
+    "@angular/cdk": "^11.2.8",
+    "@angular/common": "^11.2.9",
+    "@angular/compiler": "^11.2.9",
+    "@angular/core": "^11.2.9",
+    "@angular/forms": "^11.2.9",
+    "@angular/platform-browser": "^11.2.9",
+    "@angular/platform-browser-dynamic": "^11.2.9",
+    "@angular/router": "^11.2.9",
     "@nebular/auth": "7.0.0",
     "@nebular/eva-icons": "7.0.0",
     "@nebular/moment": "^7.0.0",
@@ -46,7 +46,7 @@
     "@nebular/theme": "7.0.0",
     "bootstrap": "^4.6.0",
     "classlist.js": "1.1.20150312",
-    "core-js": "^3.8.3",
+    "core-js": "^3.10.1",
     "echarts": "^5.0.2",
     "eva-icons": "^1.1.3",
     "intl": "1.2.5",
@@ -54,38 +54,38 @@
     "nebular-icons": "1.1.0",
     "ng2-completer": "^9.0.1",
     "ng2-smart-table": "^1.6.0",
-    "ngx-echarts": "^6.0.0",
+    "ngx-echarts": "^6.0.1",
     "normalize.css": "^8.0.1",
-    "pace-js": "1.0.2",
+    "pace-js": "^1.2.4",
     "resize-observer-polyfill": "^1.5.1",
     "roboto-fontface": "^0.10.0",
-    "rxjs": "^6.6.3",
-    "rxjs-compat": "^6.6.3",
-    "socket.io-client": "^3.1.1",
+    "rxjs": "^6.6.7",
+    "rxjs-compat": "^6.6.7",
+    "socket.io-client": "^2.4.0",
     "style-loader": "^2.0.0",
-    "tslib": "^2.0.0",
+    "tslib": "^2.2.0",
     "typeface-exo": "^1.1.13",
     "web-animations-js": "^2.3.2",
-    "zone.js": "^0.11.3"
+    "zone.js": "^0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1101.4",
-    "@angular/cli": "^11.1.4",
-    "@angular/compiler-cli": "^11.1.2",
-    "@angular/language-service": "^11.1.2",
+    "@angular-devkit/build-angular": "^0.1102.8",
+    "@angular/cli": "^11.2.8",
+    "@angular/compiler-cli": "^11.2.9",
+    "@angular/language-service": "^11.2.9",
     "@compodoc/compodoc": "^1.1.11",
-    "@fortawesome/fontawesome-free": "^5.2.0",
+    "@fortawesome/fontawesome-free": "^5.15.3",
     "@types/d3-color": "^2.0.1",
     "@types/googlemaps": "^3.43.3",
-    "@types/jasmine": "^3.6.3",
+    "@types/jasmine": "^3.6.9",
     "@types/jasminewd2": "^2.0.8",
-    "@types/node": "^14.14.25",
+    "@types/node": "^14.14.37",
     "codelyzer": "^6.0.0",
     "conventional-changelog-cli": "^2.1.1",
-    "husky": "^5.0.9",
-    "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "^6.0.0",
-    "karma": "^6.1.0",
+    "husky": "^6.0.0",
+    "jasmine-core": "^3.7.1",
+    "jasmine-spec-reporter": "^7.0.0",
+    "karma": "^6.3.2",
     "karma-chrome-launcher": "~3.1.0",
     "karma-cli": "^2.0.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
@@ -94,7 +94,7 @@
     "npm-run-all": "^4.1.5",
     "protractor": "~7.0.0",
     "rimraf": "^3.0.2",
-    "stylelint": "^13.9.0",
+    "stylelint": "^13.12.0",
     "ts-node": "^9.1.1",
     "tslint": "~6.1.0",
     "tslint-language-service": "^0.9.9",
