--- a/angular.json
+++ b/angular.json
@@ -22,11 +22,10 @@
             "styles": [
               "node_modules/bootstrap/dist/css/bootstrap.css",
               "node_modules/typeface-exo/index.css",
-              "node_modules/roboto-fontface/css/roboto/roboto-fontface.css",
-              "node_modules/@fortawesome/fontawesome-free/css/all.css",
               "node_modules/nebular-icons/scss/nebular-icons.scss",
               "node_modules/pace-js/templates/pace-theme-flash.tmpl.css",
-              "src/app/@theme/styles/styles.scss"
+              "src/app/@theme/styles/styles.scss",
+              "src/assets/role_icons/style.css"
             ],
             "scripts": [
               "node_modules/pace-js/pace.min.js",
