--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "ngx-admin",
-  "version": "7.0.0",
+  "name": "enigma-app",
+  "version": "0.0.1",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/akveo/ngx-admin.git"
+    "url": "git+https://github.com/91-PzG/enigma-website.git"
   },
   "bugs": {
-    "url": "https://github.com/akveo/ngx-admin/issues"
+    "url": "https://github.com/91-PzG/enigma-website/issues"
   },
   "scripts": {
     "ng": "ng",
@@ -30,74 +30,74 @@
   },
   "dependencies": {
     "@akveo/ng2-completer": "^9.0.1",
-    "@angular/animations": "^11.2.9",
-    "@angular/cdk": "^11.2.8",
-    "@angular/common": "^11.2.9",
-    "@angular/compiler": "^11.2.9",
-    "@angular/core": "^11.2.9",
-    "@angular/forms": "^11.2.9",
-    "@angular/platform-browser": "^11.2.9",
-    "@angular/platform-browser-dynamic": "^11.2.9",
-    "@angular/router": "^11.2.9",
-    "@nebular/auth": "7.0.0",
-    "@nebular/eva-icons": "7.0.0",
-    "@nebular/moment": "^7.0.0",
-    "@nebular/security": "7.0.0",
-    "@nebular/theme": "7.0.0",
-    "bootstrap": "^4.6.0",
+    "@angular/animations": "^13.0.1",
+    "@angular/cdk": "^13.0.1",
+    "@angular/common": "^13.0.1",
+    "@angular/compiler": "^13.0.1",
+    "@angular/core": "^13.0.1",
+    "@angular/forms": "^13.0.1",
+    "@angular/platform-browser": "^13.0.1",
+    "@angular/platform-browser-dynamic": "^13.0.1",
+    "@angular/router": "^13.0.1",
+    "@nebular/auth": "^8.0.0",
+    "@nebular/eva-icons": "^8.0.0",
+    "@nebular/moment": "^8.0.0",
+    "@nebular/security": "^8.0.0",
+    "@nebular/theme": "^8.0.0",
+    "bootstrap": "^5.1.3",
     "classlist.js": "1.1.20150312",
-    "core-js": "^3.10.1",
-    "echarts": "^5.0.2",
+    "core-js": "^3.19.1",
+    "echarts": "^5.2.2",
     "eva-icons": "^1.1.3",
     "intl": "1.2.5",
     "moment": "^2.29.1",
     "nebular-icons": "1.1.0",
     "ng2-completer": "^9.0.1",
     "ng2-smart-table": "^1.6.0",
-    "ngx-echarts": "^6.0.1",
+    "ngx-echarts": "^8.0.0",
     "normalize.css": "^8.0.1",
     "pace-js": "^1.2.4",
     "resize-observer-polyfill": "^1.5.1",
     "roboto-fontface": "^0.10.0",
-    "rxjs": "^6.6.7",
+    "rxjs": "^7.4.0",
     "rxjs-compat": "^6.6.7",
-    "socket.io-client": "^2.4.0",
-    "style-loader": "^2.0.0",
-    "tslib": "^2.2.0",
+    "socket.io-client": "^4.3.2",
+    "style-loader": "^3.3.1",
+    "tslib": "^2.3.1",
     "typeface-exo": "^1.1.13",
     "web-animations-js": "^2.3.2",
     "zone.js": "^0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1102.8",
-    "@angular/cli": "^11.2.8",
-    "@angular/compiler-cli": "^11.2.9",
-    "@angular/language-service": "^11.2.9",
-    "@compodoc/compodoc": "^1.1.11",
-    "@fortawesome/fontawesome-free": "^5.15.3",
-    "@types/d3-color": "^2.0.1",
+    "@angular-devkit/build-angular": "^13.0.2",
+    "@angular/cli": "^13.0.2",
+    "@angular/compiler-cli": "^13.0.1",
+    "@angular/language-service": "^13.0.1",
+    "@compodoc/compodoc": "^1.1.15",
+    "@fortawesome/fontawesome-free": "^5.15.4",
+    "@types/d3-color": "^3.0.2",
     "@types/googlemaps": "^3.43.3",
-    "@types/jasmine": "^3.6.9",
-    "@types/jasminewd2": "^2.0.8",
-    "@types/node": "^14.14.37",
-    "codelyzer": "^6.0.0",
+    "@types/jasmine": "^3.10.2",
+    "@types/jasminewd2": "^2.0.10",
+    "@types/node": "^16.11.7",
+    "codelyzer": "^6.0.2",
     "conventional-changelog-cli": "^2.1.1",
-    "husky": "^6.0.0",
-    "jasmine-core": "^3.7.1",
+    "husky": "^7.0.4",
+    "jasmine-core": "^3.10.1",
     "jasmine-spec-reporter": "^7.0.0",
-    "karma": "^6.3.2",
+    "karma": "^6.3.8",
     "karma-chrome-launcher": "~3.1.0",
     "karma-cli": "^2.0.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
+    "karma-jasmine-html-reporter": "^1.7.0",
     "npm-run-all": "^4.1.5",
     "protractor": "~7.0.0",
     "rimraf": "^3.0.2",
-    "stylelint": "^13.12.0",
-    "ts-node": "^9.1.1",
+    "stylelint": "^14.1.0",
+    "ts-node": "^10.4.0",
     "tslint": "~6.1.0",
     "tslint-language-service": "^0.9.9",
-    "typescript": "^4.1.5"
+    "typescript": "^4.4.4"
   }
 }
