--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
     "@angular/compiler": "^13.0.2",
     "@angular/core": "^13.0.2",
     "@angular/forms": "^13.0.2",
-    "@angular/platform-browser": "^13.0.2",
     "@angular/platform-browser-dynamic": "^13.0.2",
+    "@angular/platform-browser": "^13.0.2",
     "@angular/router": "^13.0.2",
     "@nebular/auth": "^8.0.0",
     "@nebular/eva-icons": "^8.0.0",
@@ -59,8 +59,8 @@
     "pace-js": "^1.2.4",
     "resize-observer-polyfill": "^1.5.1",
     "roboto-fontface": "^0.10.0",
-    "rxjs": "^7.4.0",
     "rxjs-compat": "^6.6.7",
+    "rxjs": "^7.4.0",
     "socket.io-client": "^4.4.0",
     "style-loader": "^3.3.1",
     "tslib": "^2.3.1",
@@ -85,19 +85,20 @@
     "husky": "^7.0.4",
     "jasmine-core": "^3.10.1",
     "jasmine-spec-reporter": "^7.0.0",
-    "karma": "^6.3.9",
     "karma-chrome-launcher": "~3.1.0",
     "karma-cli": "^2.0.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.7.0",
+    "karma-jasmine": "~4.0.0",
+    "karma": "^6.3.9",
     "npm-run-all": "^4.1.5",
+    "prettier": "^2.4.1",
     "protractor": "~7.0.0",
     "rimraf": "^3.0.2",
     "stylelint": "^14.1.0",
     "ts-node": "^10.4.0",
-    "tslint": "~6.1.0",
     "tslint-language-service": "^0.9.9",
+    "tslint": "~6.1.0",
     "typescript": "^4.4.4"
   }
 }
