--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   "dependencies": {
     "@akveo/ng2-completer": "^9.0.1",
     "@angular/animations": "^13.0.3",
-    "@angular/cdk": "^13.1.0",
+    "@angular/cdk": "^13.2.3",
     "@angular/common": "^13.0.3",
     "@angular/compiler": "^13.0.2",
     "@angular/core": "^13.0.3",
@@ -45,6 +45,7 @@
     "@nebular/moment": "^9.0.0",
     "@nebular/security": "^9.0.0",
     "@nebular/theme": "^9.0.0",
+    "@swimlane/ngx-charts": "^20.0.1",
     "bootstrap": "^5.1.3",
     "classlist.js": "1.1.20150312",
     "core-js": "^3.19.3",
